# wamply

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
agent/: Dockerfile  pyproject.toml
agent/src/: config.py  main.py
agent/src/agents/: campaign_planner.py  chat_handler.py  dispatcher.py  message_composer.py  workflow.py
agent/src/api/: dependencies.py  router.py
agent/src/memory/: redis_memory.py  supabase_memory.py
agent/src/services/: ai_credits.py  ai_models.py  chat_history.py
agent/src/tools/: chat_tools.py  contacts_tool.py  history_tool.py  personalize_tool.py  status_tool.py  templates_tool.py  whatsapp_tool.py
agent/src/utils/: encryption.py  rate_limiter.py  telemetry.py
agent/src/worker/: queue_consumer.py
backend/: Dockerfile  pyproject.toml
backend/scripts/: migrate_subscriptions.py
backend/src/: config.py  dependencies.py  main.py
backend/src/api/: admin.py  admin_twilio.py  agent_proxy.py  billing.py  business.py  campaigns.py  contacts.py  groups.py  messages.py  plan.py  router.py  settings.py  templates.py
backend/src/auth/: jwt.py  permissions.py  service_auth.py
backend/src/services/: ai_assists.py  ai_campaigns.py  ai_credit_reminders.py  ai_credits.py  ai_feature_gating.py  ai_models.py  ai_template.py  billing.py  business_profile.py  (+12 more)
backend/tests/: test_admin_business_status.py  test_admin_me_permissions.py  test_admin_role_change.py  test_admin_twilio_overview.py  test_admin_twilio_permission.py  test_admin_twilio_policy.py  test_admin_twilio_rotate.py  test_admin_twilio_suspend.py  test_ai_feature_gating.py  test_auth.py  test_campaigns_crud.py  test_contacts_crud.py  test_cost_preview.py  test_groups_crud.py  test_permissions.py  test_plan_migration_emails.py  test_quota_enforcement.py  test_role_change_emails.py
(+333 files in other folders)
