[project]
name = "wcm-agent"
version = "0.1.0"
description = "WhatsApp Campaign Manager - AI Agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "asyncpg>=0.30",
    "redis[hiredis]>=5.2",
    "cryptography>=44.0",
    "structlog>=24.4",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "anthropic>=0.52",
    "twilio>=9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "debugpy>=1.8",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
